config/1-必知必会/export/ingress/hostport-hostnet/eureka-ingress-svc-dep.yaml
#deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-eureka-dep
spec:
  selector:
    matchLabels:
      app: springboot-eureka
  replicas: 2
  template:
    metadata:
      labels:
        app: springboot-eureka
    spec:
      containers:
      - name: springboot-eureka
        image: registry.cn-beijing.aliyuncs.com/alexzhang/spring-eureka:2.0.0
        ports:
        - containerPort: 8080
---
#service
apiVersion: v1
kind: Service
metadata:
  name: springboot-eureka-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: springboot-eureka
  type: ClusterIP

---
#ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-eureka-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "eureka.test.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: springboot-eureka-service
                port:
                  number: 80
